# lidar-parser-rs

./: Cargo.toml
docs/: out-format.md
hesai-pcap-parser-rs/: at128_angle_correction.py
hesai-pcap-parser-rs/src/: constants_at128.rs  detect_model.rs  lib.rs  main.rs  parse_at128.rs  parse_xt32.rs  parseargs.rs  run.rs
livox-parser-rs/: Cargo.toml
livox-parser-rs/src/: lib.rs  main.rs  parseargs.rs  parser.rs  run.rs
livox-parser-rs/src/parser/: lvx.rs  lvx2.rs  pcap.rs
ls-pcap-parser-rs/: Cargo.toml  calc_vertical_angle.py
ls-pcap-parser-rs/src/: constants.rs  lib.rs  main.rs  packetinfo.rs  parseargs.rs  run.rs  signalsplitwriter.rs
velo-pcap-parser-rs/: Cargo.toml
velo-pcap-parser-rs/src/: lib.rs  main.rs
writer-common/: Cargo.toml
writer-common/src/: azimuthsplitwriter.rs  csvwriter.rs  framesplitter.rs  framewriter.rs  hdfwriter.rs  lib.rs  pcdwriter.rs  timesplitwriter.rs  valueslopesplitwriter.rs  velopoint.rs
writer-common/src/framewriter/: csvwriter.rs  hdfwriter.rs  pcdwriter.rs  progressbarext.rs
