[package]
name = "writer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
pcap-parser = "0.14.1"
anyhow = "1.0.75"
pcd-rs = "0.10.0"
